azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "authenticationType": {
            "type": "string",
            "defaultValue": "password",
            "allowedValues": [
                "sshPublicKey",
                "password"
            ],
            "metadata": {
                "description": "Type of authentication to use on the Virtual Machine. SSH key is recommended."
            }
        },
        "cloudboostCommonPassword": {
            "type": "securestring",
            "defaultValue": "Change_Me12345_",
            "metadata": {
                "description": "The password for AVE user."
            }
        },
        "cloudboostRootImageURI": {
            "type": "string",
            "defaultValue": "https://opsmanagerimage.blob.local.azurestack.external/images/cloudboost/19.2/root.vhd",
            "metadata": {
                "description": "Local Uri of the Operations Manager VHD to create Custom image from"
            }
        },
        "cloudboostLvmImageURI": {
            "type": "string",
            "defaultValue": "https://opsmanagerimage.blob.local.azurestack.external/images/cloudboost/19.2/lvm.vhd",
            "metadata": {
                "description": "Local Uri of the Operations Manager VHD to create Custom image from"
            }
        },        
        "cloudboostName": {
            "type": "string",
            "defaultValue": "cloudboostazs1",
            "maxLength": 10,
            "metadata": {
                "description": "Name of the AVE virtual machine"
            }
        },
        "cloudboostNetworkInterfaceType": {
            "type": "string",
            "metadata": {
                "description": "Do we want to Connect AVE with Public IP ?"
            },
            "allowedValues": [
                "Public",
                "Private"
            ]
        },

        "cloudboostPasswordOrKey": {
            "type": "securestring",
            "defaultValue": "Change_Me12345_",
            "metadata": {
                "description": "The password for AVE Settings."
            }
        },

        "cloudboostTimeZone": {
            "type": "string",
            "defaultValue": "Europe/Berlin",
            "allowedValues": [ "Africa/Abidjan","Africa/Accra","Africa/Addis_Ababa","Africa/Algiers","Africa/Asmara","Africa/Asmera","Africa/Bamako","Africa/Bangui","Africa/Banjul","Africa/Bissau","Africa/Blantyre","Africa/Brazzaville","Africa/Bujumbura","Africa/Cairo","Africa/Casablanca","Africa/Ceuta","Africa/Conakry","Africa/Dakar","Africa/Dar_es_Salaam","Africa/Djibouti","Africa/Douala","Africa/El_Aaiun","Africa/Freetown","Africa/Gaborone","Africa/Harare","Africa/Johannesburg","Africa/Kampal [...]
            "metadata": {
                "description": "Timezone for Avamar Appliance"
            }
        },
        "cloudboostUsername": {
            "type": "string",
            "defaultValue": "avamaruser",
            "metadata": {
                "description": "The username for AVE."
            }
        },
        "cloudboostRootVhd": {
            "type": "string",
            "defaultValue": "root.vhd",
            "metadata": {
                "description": "AVE VHD Name"
            }

        },
        "cloudboostLvmVhd": {
            "type": "string",
            "defaultValue": "lvm.vhd",
            "metadata": {
                "description": "AVE VHD Name"
            }

        },        
        "diagnosticsStorageAccountExistingResourceGroup": {
            "type": "string",
            "defaultValue": "registry",
            "metadata": {
                "description": "The name of the Resource Group which contains the existing storage account to be used by diagnostics."
            }
        },
        "diagnosticsStorageAccountName": {
            "type": "string",
            "defaultValue": "ckboxhxdal63isalinuxvm",
            "metadata": {
                "description": "Storage account to be used by diagnostics. Diagnostics supports only Standard_GRS,Standard_LRS,Standard_RAGRS storage account types."
            }
        },
        "vnetExistingResourceGroup": {
            "type": "string",
            "defaultValue": "registry",
            "metadata": {
                "description": "The name of the Resource Group which contains the existing Virtual Network that AVE/DDVE will be connected to."
            }
        },
        "vnetName": {
            "type": "string",
            "defaultValue": "harborVNET",
            "metadata": {
                "description": "The name of the existing Virtual Network that AVE/DDVE will be connected to."
            }
        },
        "vnetSubnetName": {
            "type": "string",
            "defaultValue": "Subnet1",
            "metadata": {
                "description": "The name of the existing subnet that AVE/DDVE will be connected to."
            }
        }
    },
    "variables": {
        "apiVersion": "2017-06-01",
        "cloudboostExternalHostname": "node",
        "cloudboostIPAllocationMethod": "Static",
        "cloudboostNicName": "[concat(parameters('cloudboostName'), '-nic-0')]",
        "cloudboostNsg": "[concat(parameters('cloudboostName'), '-nsg')]",
        "cloudboostRootDisk": "[concat(parameters('cloudboostName'), '-Rootdisk')]",
        "cloudboostLvmDisk": "[concat(parameters('cloudboostName'), '-Lvmdisk')]",
        "cloudboostPublicIP": {
            "id": "[resourceId('Microsoft.Network/publicIPAddresses',Concat(variables('cloudboostNicName'),'-pip'))]"
        },
        "cloudboostPublicIPName": "[concat(variables('cloudboostNicName'),'-pip')]",
        "cloudboostVersion": "[replace(parameters('cloudboostVhd'),'.vhd', '')]",
        "cloudboostVmSize": "[if(equals(parameters('cloudboostSizeInTB'), '2'), 'Standard_DS3_v2', 'Standard_DS4_v2')]",
        "filesToDownload": [
            "https://raw.githubusercontent.com/bottkars/201-solution-azurestack-avamar/master/scripts/deploy_base.sh",
            "https://raw.githubusercontent.com/bottkars/201-solution-azurestack-avamar/master/scripts/configure-cloudboost-azs.sh"
        ],
        "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
                "publicKeys": [
                    {
                        "path": "[concat('/home/', parameters('cloudboostUserName'), '/.ssh/authorized_keys')]",
                        "keyData": "[parameters('cloudboostPasswordOrKey')]"
                    }
                ]
            }
        },
        "subnetId": "[concat(variables('vnetId'), '/subnets/', parameters('vnetSubnetName'))]",
        "vnetId": "[resourceId(parameters('vnetExistingResourceGroup'), 'Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('cloudboostName'),'/initvm')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": "[variables('filesToDownload')]",
                    "timestamp": 2
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('bash -l -c \"./deploy_base.sh 2>&1 | tee /home/', parameters('cloudboostUserName'), '/install.log\"')]"
                }
            },
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('cloudboostName'))]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('cloudboostName')]",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('cloudboostVmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[resourceId('Microsoft.Compute/images', variables('cloudboostVersion'))]"
                    },
                    "osDisk": {
                        "name": "[variables('cloudboostRootDisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    },
                    "dataDisks": [
                        {
                        "caching": "ReadWrite",
                        "lun": 0,
                        "name": "[variables('cloudboostLvmDisk')]",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        },
                        "createOption": "FromImage"
                            }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('cloudboostName')]",
                    "adminUsername": "[parameters('cloudboostUserName')]",
                    "adminPassword": "[parameters('cloudboostPasswordOrKey')]",
                    "customData": "[reference('Microsoft.Resources/deployments/generate-customdata', '2015-01-01').outputs.customData.value]",
                    "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('cloudboostNicName'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId(parameters('diagnosticsStorageAccountExistingResourceGroup'), 'Microsoft.Storage/storageAccounts', parameters('diagnosticsStorageAccountName')), variables('apiVersion')).primaryEndpoints['blob']]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('cloudboostNicName'))]",
                "[concat('Microsoft.Compute/images/', variables('cloudboostVersion'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('cloudboostNicName')]",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('cloudboostNsg'))]",
                "[concat('Microsoft.Network/publicIPAddresses/', variables('cloudboostNicName'),'-pip')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('subnetId')]"
                            },
                            "privateIPAddressVersion": "IPv4",
                            "publicIPAddress": "[if(equals(parameters('cloudboostNetworkInterfaceType'),'Public'), variables('cloudboostPublicIP'), json('null'))]"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('cloudboostNsg'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('cloudboostNsg')]",
            "apiVersion": "2017-10-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "TCP_inbound_rule_1",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_2",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_3",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_4",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "163",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1060,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_5",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1100,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_6",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "700",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1150,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_7",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "7543",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1210,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_8",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "7778-7781",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1280,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_9",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8543",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1360,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_10",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9090",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1450,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_11",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1550,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_12",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "27000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1660,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_13",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "28001-28002",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1780,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_14",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "28810-28819",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1910,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_15",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "29000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2050,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_inbound_rule_16",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "30001-30003",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2200,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_inbound_rule_1",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2210,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_inbound_rule_2",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "163",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2220,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_1",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "7",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_2",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_3",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "25",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_4",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "111",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1060,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_5",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1100,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_6",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "163",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1150,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_7",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1210,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_8",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "700",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1280,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_9",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "2049",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1360,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_10",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "2052",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1450,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_11",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3008",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1550,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_12",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1660,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_13",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8888",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1780,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_14",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1910,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_15",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "27000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2050,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_16",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "28001-28010",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2200,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_17",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "29000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2360,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "TCP_outbound_rule_18",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "30001-30010",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2530,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_outbound_rule_1",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2540,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_outbound_rule_2",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "111",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2550,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_outbound_rule_3",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2570,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_outbound_rule_4",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "163",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2600,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_outbound_rule_5",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "2049",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2640,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    },
                    {
                        "name": "UDP_outbound_rule_6",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "2052",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 2690,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [
                            ],
                            "destinationAddressPrefixes": [
                            ]
                        }
                    }
                ]
            },
            "dependsOn": [
            ]
        },
        {
            "apiVersion": "2017-04-01",
            "condition": "[equals(parameters('cloudboostNetworkInterfaceType'),'Public')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('cloudboostPublicIPName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "[Concat(variables('cloudboostNicName'),'-pip')]"
            },
            "properties": {
                "publicIPAllocationMethod": "[variables('cloudboostIPAllocationMethod')]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('cloudboostName')]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/images",
            "apiVersion": "2017-12-01",
            "name": "[variables('cloudboostVersion')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "provisioner": "dps_cloudboost_azurestack_template"
            },
            "properties": {
                "storageProfile": {
                    "osDisk": {
                        "osType": "Linux",
                        "osState": "Generalized",
                        "blobUri": "[parameters('cloudboostRootImageURI')]",
                        "storageAccountType": "Standard_LRS",
                        "caching": "ReadWrite",
                        "diskSizeGB": 50
                    },
                    "dataDisks":[{
                        "osType": "Linux",
                        "LUN" :0,
                        "blobUri": "[parameters('cloudboostLvmImageURI')]",
                        "storageAccountType": "Standard_LRS",
                        "caching": "ReadWrite",
                        "diskSizeGB": 40
                    }]                   
                }
            }
        },
        {
            "type": "Microsoft.Resources/deployments",
            "name": "generate-customdata",
            "apiVersion": "2015-01-01",
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "https://raw.githubusercontent.com/bottkars/201-solution-azurestack-avamar/master/generate-customdata.json",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "customData": {
                        "value": {
                            "AVE_TIMEZONE": "[parameters('cloudboostTimeZone')]",
                            "AVE_UPGRADE_CLIENT_DOWNLOADS_URL": "[parameters('cloudboostUpgradeClientDownloadsURI')]",
                            "AVE_UPGRADE_CLIENT_DOWNLOADS_PACKAGE": "[parameters('cloudboostUpgradeClientDownloadsPackage')]",
                            "AVE_COMMON_PASSWORD": "[parameters('cloudboostCommonPassword')]",
                            "AVE_PASSWORD": "[reference(variables('cloudboostNicName')).ipConfigurations[0].properties.privateIPAddress]",
                            "AVE_EXTERNAL_FQDN": "[if(equals(parameters('cloudboostNetworkInterfaceType'), 'public'), reference(variables('cloudboostPublicIPName'),'2017-10-01').dnsSettings.fqdn,'')]",
                            "EXTERNAL_HOSTNAME": "[variables('cloudboostExternalHostname')]"
                        }
                    }
                }
            },
            "dependsOn": [
            ]
        }
    ],
    "outputs": {
        "Notes": {
            "type": "string",
            "value": "Avamar Installation System is now running. Please monitor below URL"
        },
        "AvamarUrl": {
            "type": "string",
            "value": "[concat('https://', reference(variables('cloudboostNicName')).ipConfigurations[0].properties.privateIPAddress, '/avi')]"
        }
    }
}
